--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,18 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.mikanbako.javacommentedpackagevisibilitychecker</groupId>
-  <artifactId>commented-package-visibility-checker</artifactId>
+  <groupId>com.github.mikanbako.checkstyle.commentedpackagevisibilitycheck</groupId>
+  <artifactId>commented-package-visibility-check</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>commented-package-visibility-checker</name>
+  <name>commented-package-visibility-check</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <package.top.directory>com/github/mikanbako/javacommentedpackagevisibilitychecker</package.top.directory>
+    <package.top.directory>com/github/mikanbako/checkstyle/commentedpackagevisibilitycheck</package.top.directory>
     <testinputs.dir>${basedir}/src/testinputs/${package.top.directory}</testinputs.dir>
+    <target.jdk.version>1.5</target.jdk.version>
   </properties>
 
   <dependencies>
@@ -39,6 +40,12 @@
           <include>**/*.properties</include>
         </includes>
       </resource>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+        <includes>
+          <include>**/*.xml</include>
+        </includes>
+      </resource>
     </resources>
 
     <plugins>
@@ -47,8 +54,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>${target.jdk.version}</source>
+          <target>${target.jdk.version}</target>
         </configuration>
       </plugin>
 
@@ -72,6 +79,44 @@
           <downloadJavadocs>true</downloadJavadocs>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.8</version>
+        <configuration>
+          <configLocation>${basedir}/config/checkstyle_config.xml</configLocation>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>2.4.0</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <rulesets>
+            <ruleset>${basedir}/config/pmd_rule_set.xml</ruleset>
+          </rulesets>
+          <targetJdk>${target.jdk.version}</targetJdk>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <descriptors>
+            <descriptor>src/main/assembly/bin.xml</descriptor>
+          </descriptors>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -81,6 +126,34 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
         <version>2.5.1</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.8</version>
+        <configuration>
+          <configLocation>${basedir}/config/checkstyle_config.xml</configLocation>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>2.4.0</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <rulesets>
+            <ruleset>${basedir}/config/pmd_rule_set.xml</ruleset>
+          </rulesets>
+          <targetJdk>${target.jdk.version}</targetJdk>
+        </configuration>
       </plugin>
     </plugins>
   </reporting>
